// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`redux-module-flags actions  #fetchFlags can error correctly 1`] = `
Array [
  Object {
    "payload": Object {
      "status": Object {
        "isFetching": true,
      },
    },
    "type": "flags/UPDATE_FLAG_STATUS",
  },
]
`;

exports[`redux-module-flags actions  #fetchFlags can successfully fetch Flags 1`] = `
Array [
  Object {
    "payload": Object {
      "status": Object {
        "isFetching": true,
      },
    },
    "type": "flags/UPDATE_FLAG_STATUS",
  },
  Object {
    "payload": Object {
      "error": undefined,
      "flags": Object {
        "undefined": Object {
          "activityUrl": undefined,
          "id": 3,
          "isInFlight": false,
          "url": "http://testurl3",
        },
      },
    },
    "type": "flags/STORE_FLAGS",
  },
]
`;

exports[`redux-module-flags actions  #flagActivity can error correctly 1`] = `
Array [
  Object {
    "payload": Object {
      "error": undefined,
      "flag": Object {
        "activityUrl": "https://testurl",
        "isInFlight": true,
      },
    },
    "type": "flags/ADD_FLAG",
  },
]
`;

exports[`redux-module-flags actions  #flagActivity can successfully flag an activity 1`] = `
Array [
  Object {
    "payload": Object {
      "error": undefined,
      "flag": Object {
        "activityUrl": "https://testurl",
        "isInFlight": true,
      },
    },
    "type": "flags/ADD_FLAG",
  },
]
`;

exports[`redux-module-flags actions  #removeFlagFromServer can error correctly 1`] = `
Array [
  Object {
    "payload": Object {
      "error": undefined,
      "flag": Immutable.Map {
        "id": 1,
        "url": "https://testurl",
        "activityUrl": "https://activityUrl1",
      },
    },
    "type": "flags/REMOVE_FLAG",
  },
]
`;

exports[`redux-module-flags actions  #removeFlagFromServer can successfully remove flag 1`] = `
Array [
  Object {
    "payload": Object {
      "error": undefined,
      "flag": Immutable.Map {
        "id": 1,
        "url": "https://testurl",
        "activityUrl": "https://activityUrl1",
      },
    },
    "type": "flags/REMOVE_FLAG",
  },
]
`;
